--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
     <title>CMS | Kara Loryn Lilly </title>
 </head>
 
